src/test/ui/pattern/usefulness/match-privately-empty.stderr
error[E0004]: non-exhaustive patterns: `Some(Private { misc: true, .. })` not covered
  --> $DIR/match-privately-empty.rs:13:11
   |
LL |     match private::DATA {
   |           ^^^^^^^^^^^^^ pattern `Some(Private { misc: true, .. })` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
